# quick-launcher

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
packaging/: release_notes.md
packaging/mac/: install.command
packaging/win/: README_win.txt
src/: App.tsx  CalendarTab.tsx  EditModal.tsx  ItemCard.tsx  LocalTab.tsx  MemoTab.tsx  SitesTab.tsx  TaskTab.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: kc_auth.rs  lib.rs
src/api/: client.ts  launcher-api.ts  types.ts
src/auth/: keycloak.ts
src/cache/: launcher-cache.ts
src/hooks/: useLauncherData.ts
