[package]
name = "app"
version = "1.0.0-beta.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
open = "5"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tokio = { version = "1", features = ["net", "io-util", "time"] }
urlencoding = "2"
url = "2"
keyring = "3"
